; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_shelve.c_svn_client_shelf_get_paths.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_shelve.c_svn_client_shelf_get_paths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client_shelf_get_paths(i32** %0, i8* %1, i8* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca %struct.TYPE_3__*, align 8
  store i32** %0, i32*** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = call i32* @svn_pool_create(i32* %19)
  store i32* %20, i32** %16, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = call i32* @apr_hash_make(i32* %21)
  store i32* %22, i32** %17, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = load i32*, i32** %12, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = call i32 @svn_client_get_wc_root(i8** %13, i8* %23, i32* %24, i32* %25, i32* %26)
  %28 = call i32 @SVN_ERR(i32 %27)
  %29 = load i8*, i8** %8, align 8
  %30 = load i8*, i8** %13, align 8
  %31 = load i32*, i32** %10, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = load i32*, i32** %12, align 8
  %34 = call i32 @get_patch_abspath(i8** %14, i8* %29, i8* %30, i32* %31, i32* %32, i32* %33)
  %35 = call i32 @SVN_ERR(i32 %34)
  %36 = load i8*, i8** %14, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = call i32 @svn_diff_open_patch_file(i32** %15, i8* %36, i32* %37)
  %39 = call i32 @SVN_ERR(i32 %38)
  br label %40

40:                                               ; preds = %6, %53
  %41 = load i32*, i32** %16, align 8
  %42 = call i32 @svn_pool_clear(i32* %41)
  %43 = load i32*, i32** %15, align 8
  %44 = load i32, i32* @FALSE, align 4
  %45 = load i32, i32* @FALSE, align 4
  %46 = load i32*, i32** %16, align 8
  %47 = load i32*, i32** %16, align 8
  %48 = call i32 @svn_diff_parse_next_patch(%struct.TYPE_3__** %18, i32* %43, i32 %44, i32 %45, i32* %46, i32* %47)
  %49 = call i32 @SVN_ERR(i32 %48)
  %50 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %51 = icmp ne %struct.TYPE_3__* %50, null
  br i1 %51, label %53, label %52

52:                                               ; preds = %40
  br label %66

53:                                               ; preds = %40
  %54 = load i32*, i32** %17, align 8
  %55 = load i32*, i32** %11, align 8
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @apr_pstrdup(i32* %55, i32 %58)
  %60 = load i32*, i32** %11, align 8
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = call i32 @apr_pstrdup(i32* %60, i32 %63)
  %65 = call i32 @svn_hash_sets(i32* %54, i32 %59, i32 %64)
  br label %40

66:                                               ; preds = %52
  %67 = load i32*, i32** %15, align 8
  %68 = load i32*, i32** %16, align 8
  %69 = call i32 @svn_diff_close_patch_file(i32* %67, i32* %68)
  %70 = call i32 @SVN_ERR(i32 %69)
  %71 = load i32*, i32** %16, align 8
  %72 = call i32 @svn_pool_destroy(i32* %71)
  %73 = load i32*, i32** %17, align 8
  %74 = load i32**, i32*** %7, align 8
  store i32* %73, i32** %74, align 8
  %75 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %75
}

declare dso_local i32* @svn_pool_create(i32*) #1

declare dso_local i32* @apr_hash_make(i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_client_get_wc_root(i8**, i8*, i32*, i32*, i32*) #1

declare dso_local i32 @get_patch_abspath(i8**, i8*, i8*, i32*, i32*, i32*) #1

declare dso_local i32 @svn_diff_open_patch_file(i32**, i8*, i32*) #1

declare dso_local i32 @svn_pool_clear(i32*) #1

declare dso_local i32 @svn_diff_parse_next_patch(%struct.TYPE_3__**, i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @svn_hash_sets(i32*, i32, i32) #1

declare dso_local i32 @apr_pstrdup(i32*, i32) #1

declare dso_local i32 @svn_diff_close_patch_file(i32*, i32*) #1

declare dso_local i32 @svn_pool_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
